--- a/api_proy_final/package.json
+++ b/api_proy_final/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "googleapis": "^166.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.15.3",
     "tailwindcss": "^4.1.17"
